--- a/demo/src/main/resources/static/user-profile.html
+++ b/demo/src/main/resources/static/user-profile.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booky - User Profile</title>
+    <title>Lost & Found - User Profile</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="dashboard">
     <header class="header">
-      <h1 class="logo" onclick="goToDashboard()">📚 Booky</h1>
+      <h1 class="logo" onclick="goToDashboard()">Lost & Found 🕵️</h1>
       <div class="profile-circle" onclick="goToProfile()">
         <span>U</span>
       </div>
@@ -32,7 +32,7 @@
 
         <!-- Book Listings Posted Section -->
         <section class="books-posted">
-          <h2>My Book Listings</h2>
+          <h2>Lost Items</h2>
           <div id="myListings" class="results">
             <!-- Static book card ------- Done-->
             <div class="book-card">
@@ -52,7 +52,7 @@
 
         <!-- Requests Received Section -->
         <section class="requests-received">
-          <h2>Requests for my Books</h2>
+          <h2>Found Items</h2>
           <div id="requests" class="results">
             <!-- Static book(request) card ----- Done-->
             <div class="book-card">
@@ -70,7 +70,7 @@
           </div>
         </section>
 
-        <!-- Book requests -->
+        <!-- Book requests
         <section class="books-requested">
           <h2>My Book Requests</h2>
           <div id="myresults" class="results">
@@ -86,7 +86,7 @@
             <span id="pageInfoM">1 of 5</span>
             <button onclick="nextPageM()" id="nextBtnM">Next</button>
           </div>
-        </section>
+        </section> -->
 
         <section class="logout-section">
           <button id="logoutBtn">Logout</button>
