--- a/demo/src/main/resources/static/login.html
+++ b/demo/src/main/resources/static/login.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booky Login</title>
+    <title>Lost & Found Login</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body class="login-signup">
     <div class="login-container">
-      <h1>Booky</h1>
+      <h1>Lost & Found 🕵️</h1>
       <form id="loginForm">
         <div class="form-group">
           <label for="username">Username</label>
@@ -38,10 +38,31 @@
         Don't have an account? <a href="signup.html">Sign up</a>
       </p>
 
-      <div class = "form-group">
-        <button type="button" onclick="goToDashboard()">Back to Dashboard</button>
-      </div>
+      <div class="form-group">
+        <button type="button" onclick="goToDashboard()">
+          Back to Dashboard
+        </button>
 
+        <!-- remove this later -->
+        <button class="verify-btn">+ verify screen +</button>
+      </div>
+    </div>
+
+    <!-- User Verification Modal -->
+    <div id="verificationModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2>Verify Yourself</h2>
+
+        <form id="verifyUserForm">
+          <label for="code">
+            Enter the code sent to your email <span style="color: red"> *</span>
+          </label>
+          <input type="text" id="code" required />
+
+          <button type="submit">It is I</button>
+        </form>
+      </div>
     </div>
 
     <script src="js/login.js"></script>
