--- a/demo/src/main/resources/static/signup.html
+++ b/demo/src/main/resources/static/signup.html
@@ -3,13 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booky Signup</title>
+    <title>Lost & Found Signup</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="login-signup">
     <div class="login-container">
       <h1>Create Account</h1>
       <form id="signupForm">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="What is your name?"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="surname">Surname</label>
+          <input
+            type="text"
+            id="surname"
+            placeholder="What is your surname?"
+            required
+          />
+        </div>
         <div class="form-group">
           <label for="username">Username</label>
           <input
