changed front colors

--- a/demo/src/main/resources/static/login.html
+++ b/demo/src/main/resources/static/login.html
@@ -39,30 +39,10 @@
       </p>
 
       <div class="form-group">
-        <button type="button" onclick="goToDashboard()">
-          Back to Dashboard
-        </button>
-
         <!-- remove this later -->
-        <button class="verify-btn">+ verify screen +</button>
+<!--        <button class="verify-btn">+ verify screen +</button>-->
       </div>
-    </div>
 
-    <!-- User Verification Modal -->
-    <div id="verificationModal" class="modal">
-      <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <h2>Verify Yourself</h2>
-
-        <form id="verifyUserForm">
-          <label for="code">
-            Enter the code sent to your email <span style="color: red"> *</span>
-          </label>
-          <input type="text" id="code" required />
-
-          <button type="submit">It is I</button>
-        </form>
-      </div>
     </div>
 
     <script src="js/login.js"></script>
