--- a/demo/src/main/resources/static/signup.html
+++ b/demo/src/main/resources/static/signup.html
@@ -74,8 +74,27 @@
         Already have an account? <a href="login.html">Login</a>
       </p>
 
-      <div class = "form-group"></div>
-        <button type="button" onclick="goToDashboard()">Back to Dashboard</button>
+      <div class = "form-group">
+        <!-- remove this later -->
+        <button class="verify-btn">+ verify screen +</button>
+      </div>
+
+    </div>
+
+    <!-- User Verification Modal -->
+    <div id="verificationModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2>Verify Yourself</h2>
+
+        <form id="verifyUserForm">
+          <label for="code">
+            Enter the code sent to your email <span style="color: red"> *</span>
+          </label>
+          <input type="text" id="code" required />
+
+          <button type="submit">It is I</button>
+        </form>
       </div>
     </div>
 
